kube/lookie/qbit-neo/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbit-neo-internal
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-packet-fail
    external-dns.alpha.kubernetes.io/hostname: qbit-neo.packet.fail
spec:
  ingressClassName: traefik-internal
  rules:
    - host: qbit-neo.packet.fail
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbit-neo
                port:
                  number: 8080
  tls:
    - hosts:
        - qbit-neo.packet.fail
      secretName: qbit-neo-tls
